--- a/resources/mainwindow.ui
+++ b/resources/mainwindow.ui
@@ -1011,54 +1011,15 @@
     </widget>
     <widget class="QWidget" name="tab_3">
      <attribute name="title">
-      <string>Camera Tab</string>
+      <string>Main Tab</string>
      </attribute>
      <widget class="QGroupBox" name="groupBox_4">
       <property name="geometry">
        <rect>
-        <x>810</x>
-        <y>150</y>
-        <width>151</width>
-        <height>161</height>
-       </rect>
-      </property>
-      <property name="title">
-       <string>Camera Button</string>
-      </property>
-      <widget class="QPushButton" name="DetectButton">
-       <property name="geometry">
-        <rect>
-         <x>30</x>
-         <y>40</y>
-         <width>93</width>
-         <height>28</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Detect Button</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="StopButton">
-       <property name="geometry">
-        <rect>
-         <x>30</x>
-         <y>90</y>
-         <width>93</width>
-         <height>28</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Stop Button</string>
-       </property>
-      </widget>
-     </widget>
-     <widget class="QGroupBox" name="groupBox_5">
-      <property name="geometry">
-       <rect>
-        <x>60</x>
-        <y>10</y>
-        <width>731</width>
-        <height>431</height>
+        <x>80</x>
+        <y>50</y>
+        <width>721</width>
+        <height>401</height>
        </rect>
       </property>
       <property name="title">
@@ -1069,12 +1030,51 @@
         <rect>
          <x>20</x>
          <y>20</y>
-         <width>691</width>
-         <height>401</height>
+         <width>671</width>
+         <height>361</height>
         </rect>
        </property>
        <property name="text">
         <string/>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QGroupBox" name="groupBox_5">
+      <property name="geometry">
+       <rect>
+        <x>820</x>
+        <y>50</y>
+        <width>181</width>
+        <height>221</height>
+       </rect>
+      </property>
+      <property name="title">
+       <string>Camera Button</string>
+      </property>
+      <widget class="QPushButton" name="StopButton">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>130</y>
+         <width>93</width>
+         <height>28</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Stop Button</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="DetectButton">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>60</y>
+         <width>93</width>
+         <height>28</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Detect Button</string>
        </property>
       </widget>
      </widget>
